Fixed portfolio card to allow scrolling if too long to fit screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,11 @@ h2 {
     opacity: 1;
 }
 
+#overlayCard {
+    max-height: 95vh;
+    overflow: scroll;
+}
+
 .fadeOut {
     animation-name: fade-out;
     animation-fill-mode: forwards;
